--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,23 @@ title:          Saadah
 description:    ""
 baseurl:        "/"
 url:            "https://as-saadah.github.io"
+
+
+defaults:
+  # default en
+  - values:
+      locale: en
+  # config posts
+  - scope:
+      path: "_posts/**"
+      type: posts
+    values:
+      layout: post
+      permalink: /:title
+  - scope:
+      path: _posts/ar/**
+      type: posts
+    values:
+      layout: post
+      locale: ar
+      permalink: /ar/:title
