--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,9 @@ title:          Saadah
 description:    ""
 baseurl:        "/"
 url:            "https://as-saadah.github.io"
-
+markdown: kramdown
+permalink: pretty
+paginate: 20
 
 defaults:
   # default en
