--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,15 @@ baseurl:        "/"
 url:            "https://as-saadah.github.io"
 markdown: kramdown
 permalink: pretty
-paginate: 20
+
+plugins: 
+  - jekyll-paginate-v2
+  
+pagination:
+  enabled: true
+  per_page: 5
+  permalink: /page/:num/
+  sort_reverse: true
 
 defaults:
   # default en
