--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,11 @@ defaults:
       locale: en
   # config posts
   - scope:
-      path: "_posts/**"
+      path: "_posts/en/**"
       type: posts
     values:
       layout: post
-      permalink: /:title
+      permalink: /en/:title
   - scope:
       path: _posts/ar/**
       type: posts
