--- a/_data/games.yml
+++ b/_data/games.yml
@@ -8,6 +8,6 @@ game:
   symbol: vs20starlight
   provider: Pragmatic Play
 - title: Gates of Gatot Kaca
-  img: gates-of-gatotkaca.png
+  img: Gates-of-Gatotkaca.png
   symbol: vs20gatotgates
   provider: Pragmatic Play
